[gd_scene load_steps=8 format=3 uid="uid://cenhxukw6o0sg"]

[ext_resource type="Script" uid="uid://121tgwsdeicu" path="res://scenes/ui/pause_menu.gd" id="1_2k4m3"]
[ext_resource type="FontFile" uid="uid://tuitm4lc211o" path="res://assets/ui/IosevkaStiletto-Condensed.ttf" id="2_8uki6"]
[ext_resource type="PackedScene" uid="uid://b8yvnxqnxqnxq" path="res://scenes/ui/options_menu.tscn" id="2_options"]
[ext_resource type="FontFile" uid="uid://dhj8nspajgm8t" path="res://assets/ui/Helvetica Black Regular.otf" id="3_0bnpd"]

[sub_resource type="Theme" id="Theme_4inpj"]
default_font = ExtResource("2_8uki6")
default_font_size = 26

[sub_resource type="FontVariation" id="FontVariation_8fwbo"]
base_font = ExtResource("3_0bnpd")
variation_embolden = 0.26
variation_transform = Transform2D(1.085, 0, 0, 0.68, 0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_2rlsb"]
font = SubResource("FontVariation_8fwbo")
font_size = 66

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_2k4m3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.5)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -75.0
offset_right = 100.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_4inpj")
theme_override_constants/separation = -15

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "PAUSED"
label_settings = SubResource("LabelSettings_2rlsb")
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_type_variation = &"FlatButton"
text = "Resume"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_type_variation = &"FlatButton"
text = "Options"

[node name="TitleButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_type_variation = &"FlatButton"
text = "Return to Title"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_type_variation = &"FlatButton"
text = "Quit"

[node name="QuitConfirmation" type="ConfirmationDialog" parent="."]
title = "Quit Game"
position = Vector2i(32, 57)
size = Vector2i(252, 100)
ok_button_text = "Yes"
dialog_text = "Are you sure you want to quit?"
cancel_button_text = "No"

[node name="OptionsMenu" parent="." instance=ExtResource("2_options")]
visible = false
layout_mode = 1
